--- a/css/styles.css
+++ b/css/styles.css
@@ -3,12 +3,13 @@
     padding: 0;
     margin: 0;
 }
-.section{
+
+.section {
     width: 38%;
     margin: auto;
     background-color: white;
     box-shadow: 0px 0px 9px rgba(0, 0, 0, 0.1);
-    font-family:'Roboto', sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
 h1 {
@@ -24,45 +25,51 @@ h1 {
 
 /* feature */
 
-section#feature {
+
+
+.first-box {
     position: relative;
 }
-.first-box{
-    position: relative;
-}
+
 .wall-image {
     width: 100%;
     height: 54vh;
 }
-.quora{
+
+.quora {
     position: absolute;
     font-weight: 700;
     font-size: 24px;
     color: #731111;
     top: 25px;
-    bottom: 0px;
+    /* bottom: 0px;
     right: 0px;
-    left: 470px;
+    left: 470px; */
+    left: 85%;
+        transform: translate(-50%, 0);
 }
-.dulux-img{
+
+.dulux-img {
     position: absolute;
-    width: 10%;
+    width: 11%;
     top: 20px;
     left: 27px;
 }
 
-#feature h1{
+#feature h1 {
     width: 80%;
     color: #141473;
-    padding:45px 0 23px 45px;
+    padding: 45px 0 23px 45px;
 }
-.content{
+
+.content {
     padding-left: 45px;
     font-size: 16px;
     font-weight: 400;
     opacity: 0.5;
 }
-.content-2{
+
+.content-2 {
     padding: 16px 0 0 45px;
     font-size: 16px;
     width: 94%;
@@ -76,7 +83,7 @@ section#feature {
 #third {
     position: relative;
     margin-top: 25px;
-   
+
 }
 
 .img-box {
@@ -84,7 +91,8 @@ section#feature {
     height: 110px;
     padding-left: 45px;
 }
-.quora-heading{
+
+.quora-heading {
     position: absolute;
     left: 71px;
     top: 29px;
@@ -111,9 +119,11 @@ section#feature {
     max-width: 56px;
     padding-right: 15px;
 }
-.service-box{
+
+.service-box {
     width: 24%;
 }
+
 .service-title {
     padding-top: 8px;
     font-size: 14px;
@@ -136,7 +146,7 @@ section#feature {
 
 /* footer */
 
-.container-3{
+.container-3 {
     padding-top: 45px
 }
 
@@ -149,43 +159,53 @@ section#feature {
     font-size: 17px;
     color: white;
 }
-.last-box{
+
+.last-box {
     box-shadow: 5px 6px 8px 6px rgb(210 214 218);
     width: 84%;
     height: 211px;
     margin: auto;
 }
-.list-section{
+
+.list-section {
     padding-top: 2px;
 }
-.color-1{
+
+.color-1 {
     background-color: #00baba;
 }
-.color-2{
-background-color: #007c7c;
-}
-.color-3{
-background-color: #0e4c4c;
+
+.color-2 {
+    background-color: #007c7c;
 }
 
-.footer-box{
+.color-3 {
+    background-color: #0e4c4c;
+}
+
+.footer-box {
     padding-left: 45px;
     padding-top: 48px;
     font-size: 16px;
     width: 93%;
 }
-.para-1, .para-2, .para-3{
+
+.para-1,
+.para-2,
+.para-3 {
     opacity: 0.5;
 }
 
-.para-2{
+.para-2 {
     padding-top: 20px;
 }
-.para-3{
-    
+
+.para-3 {
+
     padding-top: 20px
 }
-.para-4{
+
+.para-4 {
     color: #141473;
     padding-top: 5px;
     font-weight: 700;
@@ -195,18 +215,29 @@ background-color: #0e4c4c;
 @media screen and (max-width:750px) {
 
     /* feature */
-p{
-    font-size: 15px;
-}
-   .section{
-    margin: 0;
-    width: 100%;
-   }
-   .quora{
-    /* left: 446px; */
-    left: 300px;
-   }
- 
+    p {
+        font-size: 15px;
+    }
 
+    .section {
+        margin: 0;
+        width: 100%;
+    }
+
+    /* .quora {
+        left: 446px;
+        left: 300px;
+    }*/
+    .wall-image{
+        height: 48vh;
+    } 
+
+    .quora {
+        bottom: auto;
+        left: 85%;
+        transform: translate(-50%, 0);
+      }
+    
+     
 
 }
